<resources>
    <string name="app_name">Chain DZ Administration</string>
    <string name="revolutionizing_your_supply_chain">Revolutionizing Your Supply Chain</string>
    <string name="something_wrong_happened">Something Wrong Happened</string>
    <string name="choose_your_preferred_language">Choose your preferred language</string>
    <string name="please_select_your_language">Please select your language</string>
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="login_to_continue_using_the_app">Login to continue using the app</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="please_wait">Please Wait</string>
    <string name="email_doent_exist">Email Doesn\'t Exist</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="field_can_not_be_empty">Field cannot be empty</string>
    <string name="please_enter_a_valid_email">Please enter a valid email</string>
    <string name="forget_password_no">Forget Password</string>
    <string name="please_type_your_email_below_so_we_can_sen_you_a_reseting_password_link">Please type your email below so we can send you a reseting password link</string>
    <string name="reset">Reset</string>
    <string name="email_has_been_sent">Email has been sent</string>
    <string name="hello_admin">Hello Admin</string>
    <string name="add_admin">Add Admin</string>
    <string name="manage_accounts">Manage Accounts</string>
    <string name="create_admin_account">Create Admin Account</string>
    <string name="enter_admin_personal_information">Enter Admin personal informations</string>
    <string name="name">Name</string>
    <string name="create">Create</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="wilaya">Wilaya</string>
    <string name="city">City</string>
    <string name="create_account">Create Account</string>
    <string name="enter_account_information">Please enter account information</string>
    <string name="weak_password">Weak Password</string>
    <string name="passwords_not_match">Passwords Doesn\'t Match</string>
    <string name="email_already_used">Email Already Used</string>
    <string name="account_created_succefuly">Account Created Succefully</string>
    <string name="production_name">Production name</string>
    <string name="hello_again">Hello Again</string>
    <string name="enjoy_our_services">Enjoy our services</string>
    <string name="explore_more_about_us_and_learn_how_to_use_the_app">Explore more about us and learn how to use the app</string>
    <string name="feel_free_to_use_our_app">Feel free to use our app</string>
    <string name="manage_products">Manage Products</string>
    <string name="add_new_product">Add New Product</string>
    <string name="change_language">Change Language</string>
    <string name="logout">Logout</string>
    <string name="add_product">Add new product</string>
    <string name="price_per_unit">Price per unit</string>
    <string name="product_name">Product Name</string>
    <string name="ingredients_amp_description"><![CDATA[Ingredients & Description]]></string>
    <string name="bar_code">Bar Code</string>
    <string name="permission_denied_message">Permision denied</string>
    <string name="please_add_product_image">Please add product image</string>
    <string name="product_created_succefully">Product Created succefully</string>
    <string name="volume_up">Volume up to flash on</string>
    <string name="search">Search</string>
    <string name="_1kg">1KG</string>
    <string name="dzd">DZD</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="manage_everything_achieve_more">Manage Everything, Achieve More</string>
    <string name="add_production_account">Add Production Account</string>
    <string name="add_stock_account">Add Stock\nAccount</string>
    <string name="add_claim_manager_account">Add Claim Account</string>
    <string name="manage_nusers">Manage\nUsers</string>
    <string name="browse_nproducts">Browse\nProducts</string>
    <string name="change_nlanguage">Change\nLanguage</string>
    <string name="stock_in">Stock In</string>
    <string name="stock_out">Stock Out</string>
    <string name="enter_product_lot">Enter Product Lot</string>
    <string name="product_lot">Product Lot</string>
    <string name="OK">OK</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="product_not_exist">Product does not exist</string>
    <string name="scan_again">Scan Again</string>
    <string name="product_lot_canot_be_empty">Product lot cannot be empty</string>
    <string name="product_lot_already_in">Product lot already in stock</string>
    <string name="product_lot_not_exist">Product Lot or serial number does not exist</string>
    <string name="product_not_in">Product not in stock</string>
    <string name="mark_as_completed">Mark As Completed</string>
</resources>